# confident-legal-research-evaluation

./: .example.env  .gitignore  PLAN.md  experiments.ipynb  know-your-data.ipynb  make_search_better.ipynb  pyproject.toml
src/: corpus_analysis.py  dataset.py  doc_mapping.py  encoder.py  entity_analysis.py  evaluation.py  indexing.py  ngram_analysis.py  rag.py  rerank.py  search.py
